@@ -1,8 +1,8 @@
 
-most recent change:	  12-Jan-1998
+most recent change:	   7-May-1998
 
-The file Raster3D_2.4b.tar.Z contains the full source distribution for
-version 2.4b of RASTER3D.
+The file Raster3D_2.4f.tar.Z contains the full source distribution for
+version 2.4f of RASTER3D.
 
 This is a unified distribution which has been tested on the following 
 machines:
@@ -32,6 +32,7 @@ New in version 2.4:
 			with unit extent in X, Y, and Z.
 	type 17:	explicit vertex colors for triangles, 
 			allows smoother coloring of triangular mesh surfaces
+			(used by the ungrasp utility)
 
 - other changes to render
 			EYEPOS = 0.0 disables all perspective 
@@ -43,7 +44,9 @@ New in version 2.4:
 	rastep		generates thermal ellipsoid representations of atoms
 			based on ANISOU records in PDB file. Also allows
 			isotropic representation with size and colour based
-			on isotropic B values.
+			on isotropic B values.  This program is still under
+			development, and more than one version may be in this
+			kit.
 
 	render_jpeg	alternative version of the rendering program that
 			produces a JPEG (JFIF) image stream on stdout
